cedar-lean/UnitTest/parser_tests/negative/invalid_method_syntax.cedar
permit(principal, action, resource) when { contains(resource.tags, "x") };
